traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/hayuah.rpy", line 12, in script
    show eileen at Position(xalign=1,0, yalign=0.6, zoom=0.1)
  File "game/hayuah.rpy", line 12
    Position(xalign=1,0, yalign=0.6, zoom=0.1)
                                             ^
SyntaxError: positional argument follows keyword argument

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/hayuah.rpy", line 12, in script
    show eileen at Position(xalign=1,0, yalign=0.6, zoom=0.1)
  File "renpy/ast.py", line 1357, in execute
    show_imspec(self.imspec, atl=getattr(self, "atl", None))
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/ast.py", line 726, in show_imspec
    at_list = [renpy.python.py_eval(i) for i in at_list]
               ~~~~~~~~~~~~~~~~~~~~^^^                  
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/hayuah.rpy", line 12
    Position(xalign=1,0, yalign=0.6, zoom=0.1)
                                             ^
SyntaxError: positional argument follows keyword argument

Windows-10-10.0.19045-SP0 AMD64
Ren'Py 8.5.2.26010301
testing 1.0
Fri Apr 17 22:00:08 2026
